parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    ELSE
    FALSE
    IF
    LBRACE
    RBRACE
    STRING
    TIMES
    TRUE
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> ID ASSIGN expression SEMICOLON
Rule 5     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> NUMBER
Rule 9     expression -> ID

Terminals, with rules where they appear

ASSIGN               : 4
DIVIDE               : 
ELSE                 : 
FALSE                : 
ID                   : 4 9
IF                   : 
LBRACE               : 
LPAREN               : 5
MINUS                : 7
NUMBER               : 8
PLUS                 : 6
PRINT                : 5
RBRACE               : 
RPAREN               : 5
SEMICOLON            : 4 5
STRING               : 
TIMES                : 
TRUE                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 6 7 7
program              : 0
statement            : 2 3
statement_list       : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . ID ASSIGN expression SEMICOLON
    (5) statement -> . PRINT LPAREN expression RPAREN SEMICOLON

    ID              shift and go to state 4
    PRINT           shift and go to state 5

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . ID ASSIGN expression SEMICOLON
    (5) statement -> . PRINT LPAREN expression RPAREN SEMICOLON

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 4
    PRINT           shift and go to state 5

    statement                      shift and go to state 6

state 3

    (3) statement_list -> statement .

    ID              reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 7


state 5

    (5) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 8


state 6

    (2) statement_list -> statement_list statement .

    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 7

    (4) statement -> ID ASSIGN . expression SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . NUMBER
    (9) expression -> . ID

    NUMBER          shift and go to state 11
    ID              shift and go to state 9

    expression                     shift and go to state 10

state 8

    (5) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . NUMBER
    (9) expression -> . ID

    NUMBER          shift and go to state 11
    ID              shift and go to state 9

    expression                     shift and go to state 12

state 9

    (9) expression -> ID .

    SEMICOLON       reduce using rule 9 (expression -> ID .)
    PLUS            reduce using rule 9 (expression -> ID .)
    MINUS           reduce using rule 9 (expression -> ID .)
    RPAREN          reduce using rule 9 (expression -> ID .)


state 10

    (4) statement -> ID ASSIGN expression . SEMICOLON
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    SEMICOLON       shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15


state 11

    (8) expression -> NUMBER .

    SEMICOLON       reduce using rule 8 (expression -> NUMBER .)
    PLUS            reduce using rule 8 (expression -> NUMBER .)
    MINUS           reduce using rule 8 (expression -> NUMBER .)
    RPAREN          reduce using rule 8 (expression -> NUMBER .)


state 12

    (5) statement -> PRINT LPAREN expression . RPAREN SEMICOLON
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    RPAREN          shift and go to state 16
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15


state 13

    (4) statement -> ID ASSIGN expression SEMICOLON .

    ID              reduce using rule 4 (statement -> ID ASSIGN expression SEMICOLON .)
    PRINT           reduce using rule 4 (statement -> ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> ID ASSIGN expression SEMICOLON .)


state 14

    (6) expression -> expression PLUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . NUMBER
    (9) expression -> . ID

    NUMBER          shift and go to state 11
    ID              shift and go to state 9

    expression                     shift and go to state 17

state 15

    (7) expression -> expression MINUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . NUMBER
    (9) expression -> . ID

    NUMBER          shift and go to state 11
    ID              shift and go to state 9

    expression                     shift and go to state 18

state 16

    (5) statement -> PRINT LPAREN expression RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 19


state 17

    (6) expression -> expression PLUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    SEMICOLON       reduce using rule 6 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 6 (expression -> expression PLUS expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15

  ! PLUS            [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 6 (expression -> expression PLUS expression .) ]


state 18

    (7) expression -> expression MINUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    SEMICOLON       reduce using rule 7 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 7 (expression -> expression MINUS expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15

  ! PLUS            [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! MINUS           [ reduce using rule 7 (expression -> expression MINUS expression .) ]


state 19

    (5) statement -> PRINT LPAREN expression RPAREN SEMICOLON .

    ID              reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    PRINT           reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    $end            reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PLUS in state 17 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 17 resolved as shift
WARNING: shift/reduce conflict for PLUS in state 18 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 18 resolved as shift
